maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:33: error: not found: value aMurSud
    if (!aMurSud(x,y) && getIndication(x,y-1) == 9999){
         ^ShortestPathMaze:37: error: not found: value aMurEst
    if (!aMurEst(x,y) && getIndication(x+1,y) == 9999){
         ^