maze.shortestpath.ShortestPathMaze.scala.code
var biscuit = (0,0);
var cell = 0;
var c = 0;
 val queue = new scala.collection.mutable.Queue

override def run() {
  positionBiscuit();

}

def positionBiscuit (){
  for(i<- 0 to getMondeLargeur() - 1){
    for(j<- 0 to getMondeHauteur() - 1){
      if(aBiscuit(i,j)){
        biscuit = (i,j);
        setIndication(i,j,c);
        c += 1;
        cell += 1;
      }
    }
  }
}


def numerote() {
  var (x,y) = biscuit;

    if (!aMurNord(x,y) && getIndication(x,y+1) == 9999){
      cell += 1 ;
      setIndication(x,y+1,getIndication(x,y)+1)
    } 
    if (!aMurSud(x,y) && getIndication(x,y-1) == 9999){
      cell += 1 ;
      setIndication(x,y-1,getIndication(x,y)+1)
    }
    if (!aMurEst(x,y) && getIndication(x+1,y) == 9999){
      cell += 1 ;
      setIndication(x+1,y,getIndication(x,y)+1)
    }
    if (!aMurOuest(x,y) && getIndication(x-1,y) == 9999){
      cell += 1 ;
      setIndication(x-1,y,getIndication(x,y)+1)
    }
  
}

